============================

For the latest information visit project web site:
https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.B1
Date:
----------------------------------
Changes/New Features:

CAY-2399 Convert string values to Enum in qualifiers

Bug Fixes:

CAY-2092 Exception for query that uses pagination and sorting on to-many
CAY-2702 Modeler: Callbacks table has too small default width
CAY-2703 Modeler: incorrect active tab style on the MacOS version
CAY-2705 Performance of callback annotation processing
CAY-2706 Modeler: object attribute dialog doesn't properly initialized for the embeddable type
CAY-2707 Modeler: code generation is broken in the DataDomain tab
CAY-2708 Gradle build plugin fails on Java 16
CAY-2709 Modeler: Cgen fails to generate code for a new unsaved project with all settings set to default
CAY-2710 Modeler: modeler throws IllegalArgumentsException when root and rel paths have different root
CAY-2712 Shouldn't run batch inserts with generated keys if there is reflexive dependency
CAY-2713 ConcurrentModificationException when Inserting
CAY-2714 Offset value is not copied to column select metadata
CAY-2716 Wrong operator for the bitwise NOT

----------------------------------
Release: 4.2.M3
Date: March 13, 2021
----------------------------------
Changes/New Features:

CAY-2587 SQLServer Limit Offset translation
CAY-2677 Custom Class Generation Templates for Embeddables and DataMaps
CAY-2689 ServerRuntime API: missing some variants of the performInTransaction() method
CAY-2692 Add entity lifecycle callbacks via annotated methods

Bug Fixes:

CAY-2658 DataChannelMetaData is null during cgen execution
CAY-2661 NPE on DB Import screen
CAY-2678 Inheritance warnings caused by unnecessary MappingCache creations during initialization
CAY-2683 Don't use DISTINCT for joins on to-one related tables